--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,10 +34,8 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
+  primary:    #313131,
+  light:      #272727,
   dark:       #222
 );
 
