Alterações na Home, inclusão dos slides

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,9 +34,9 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #313131,
-  light:      #272727,
-  dark:       #222
+  primary:    #ffffff,
+  light:      #c4ec0e,
+  dark:       rgb(6, 58, 228)
 );
 
 
