--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,283 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.align-center {
+  text-align: center;
+}
+
+.highlight {
+  background-color: #f4f4f4;
+}
+
+.center {
+  display: block;
+  margin: 0 auto;
+}
+
+.vertical-center {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.top-radius {
+  border-radius: 10% 10% 0 0;
+}
+
+.bottom-radius {
+  border-radius: 0 0 10% 10%;
+}
+
+.round {
+  border-radius: 50%;
+}
+
+.ion-button {
+    color: aqua !important;
+}
+
+.image-center {
+  align-content: center;
+}
+
+ion-title {
+  width: 40% !important;
+  position: relative;
+  display: block;
+  
+}
+
+.onboard {
+    border-color: #5f5f5f !important;
+}
+.toolbar-background,
+.toggle-checked {
+    transition: all 1.1s ease;
+    background-color: #000000 !important;
+}
+.item-note,
+.themeButton,
+.swiper-pagination-bullet {
+    transition: all 1.1s ease;
+    //background-color: #fff;
+    //border-style: solid;
+    //border-width: 1px;
+    //border-color: white;
+}
+
+ion-content,
+.input-wrapper,
+.item-inner,
+.item,
+ion-footer,
+ion-item,
+ion-label {
+    transition: all 1.1s ease;
+    background: #000000 !important;
+    color: white !important;
+}
+ion-list {
+    background-color: #9a0cf1;
+}
+.time {
+    background-color: white;
+}
+.item {
+    transition: all 1s ease;
+    background-color: #100815;
+    color: white;
+}
+.range-bar {
+    background-color: rgb(54, 54, 54) !important;
+}
+.s2,
+.s3,
+.toggle-inner,
+.range-pin,
+.range-pin::before,
+.range-knob,
+.range-bar-active {
+    background-color: white !important;
+    color: black !important;
+}
+
+.back-button {
+    color: white;
+  }
+  
+
+.menu-background {
+    .toolbar-content,
+  .back-button {
+    color: white;
+  }
+  .toolbar-background,
+  ion-navbar,
+  ion-header,
+  ion-content,
+  ion-item {
+    background: #1d1d1d !important;
+  }
+  .header-md::after,
+  .toolbar-background-ios {
+    background-image: none;
+    border-bottom: 0;
+  }
+  .header-ios .toolbar-background-ios,
+  .footer-ios .toolbar-background-ios {
+    border: 0;
+  }
+}
+
+
+.header-background {
+  .toolbar-content,
+  .back-button {
+    color: white;
+  }
+  .toolbar-background,
+  ion-navbar,
+  ion-header,
+  ion-content,
+  ion-item {
+    background: #7e7e7e !important;
+  }
+  .header-md::after,
+  .toolbar-background-ios {
+    background-image: none;
+    border-bottom: 0;
+  }
+  .header-ios .toolbar-background-ios,
+  .footer-ios .toolbar-background-ios {
+    border: 0;
+  }
+}
+
+// .transparent-header {
+//   // This is just to make the header transparent and button/icon with white color
+//   .toolbar-content,
+//   .back-button {
+//     color: white;
+//   }
+//   .toolbar-background,
+//   ion-navbar,
+//   ion-header {
+//     background: #1d1d1d !important;
+//   }
+//   .header-md::after,
+//   .toolbar-background-ios {
+//     background-image: none;
+//     border-bottom: 0;
+//   }
+//   .header-ios .toolbar-background-ios,
+//   .footer-ios .toolbar-background-ios {
+//     border: 0;
+//   }
+//   // ---
+// }
+
+// right side menu
+// #menu-right {
+//   button {
+//     padding-left: 16px;
+//   }
+//   ion-content {
+//     background: rgba(255, 36, 36, 0.82);
+//   }
+//   .menu-inner {
+//     width: 10vh;
+//   }
+//   @media screen and (orientation: landscape) {
+//     .menu-inner {
+//       width: 15vh;
+//     }
+//   }
+//   .active-menu-item {
+//     position: absolute;
+//     border-top: 6px solid transparent;
+//     border-bottom: 6px solid transparent;
+//     border-left: 6px solid #ffffff;
+//     color: #FF5D5D;
+//   }
+//   .label {
+//     display: flex;
+//     align-items: center;
+//   }
+//   .list-md[no-lines] .item-block,
+//   .list-md[no-lines] ion-item-options,
+//   .list-md[no-lines] .item .item-inner,
+//   .list-ios[no-lines] .item-block,
+//   .list-ios[no-lines] ion-item-options,
+//   .list-ios[no-lines] .item .item-inner {
+//     padding: .3rem 0;
+//     background: transparent;
+//     color: white;
+//   }
+//   ion-icon {
+//     line-height: 1;
+//   }
+// }
+
+.icon-badge {
+  top: 0px;
+  right: 0px;
+  background: #FF5D5D;
+  color: white;
+  font-size: 12px;
+  position: absolute;
+  padding: 5px 8px;
+  border-radius: 15px;
+}
+
+// Sidemenu with avatar
+// #menu-avatar {
+//   .user-avatar {
+//     padding: .5em;
+//   }
+//   h3,
+//   .label {
+//     color: white;
+//     font-weight: bold;
+//   }
+//   .item {
+//     background: transparent;
+//   }
+//   ion-content {
+//     background: linear-gradient(48deg, rgba(157, 72, 173, 0.8) 0%, rgba(157, 72, 173, 0.86) 28%, rgba(0, 168, 168, 0.98) 93%, rgba(0, 168, 168, 1) 100%);
+//   }
+//   .menu-inner {
+//     background: rgba(255, 255, 255, .3);
+//   }
+// }
+
+// Material Design Sidemenu
+// #menu-material {
+//   .menu-header {
+//     padding: 5px 15px;
+//     background-image: url('../assets/img/misc/material-design-background.jpg');
+//     background-size: cover;
+//     color: white;
+//     .name {
+//       font-weight: 500;
+//       margin-bottom: 3px;
+//     }
+//     .e-mail {
+//       margin-top: 0;
+//       margin-bottom: 5px;
+//     }
+//   }
+//   .user-avatar {
+//     padding: .5em;
+//     height: 12vh;
+//   }
+//   h3,
+//   .label,
+//   {
+//     color: #999;
+//     font-weight: 400;
+//   }
+//   ion-icon {
+//     color: #777;
+//   }
+// }
