--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,9 +34,13 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #ffffff,
-  light:      #c4ec0e,
-  dark:       rgb(6, 58, 228)
+  primary:    #ff7700,
+  light:      #d6d6d6,
+  dark:       #323232,
+  facebook: #3b5998,
+  youtube: #ff0000,
+  instagram: #125688,
+  twitter: #00aced
 );
 
 
