Últimas alterações no design das páginas, inserção da prog no ao vivo

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,9 +9,10 @@
 
   <ion-content class="menu-background">
     <ion-list class="menu-background">
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)" icon-left>
+        <ion-icon name="{{p.icon}}"></ion-icon>
         {{p.title}}
-      </button>
+      </button> 
     </ion-list>
   </ion-content>
 
