--- a/src/pages/ao-vivo/ao-vivo.scss
+++ b/src/pages/ao-vivo/ao-vivo.scss
@@ -3,7 +3,27 @@ page-ao-vivo {
         position: relative;
         padding-bottom: 56.25%;
         padding-top: 30px; height: 0; overflow: hidden;
+
+        // parallax:
+
+        position: fixed;
+        left: 0;
+        top: 40px;
+        width: 100%;
+        height: 208px;
+
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+
+        text-align: center;
     }
+
+    #content {
+        position: relative;
+        margin-top: 60%;
+        background-color: rgba(0, 0, 0, 0.87);
+      }
     
     .video-container iframe,
     .video-container object,
