--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,8 @@
 <ion-menu [content]="content" class="menu-background">
   <ion-header>
     <ion-toolbar>
-      <ion-title class="image-center">
-          <img class="logoMenu" src="assets/imgs/logo-tv (2016_10_09 11_52_39 UTC).png"/>
+      <ion-title class="image-center" padding>
+          <img class="logoMenu" src="assets/imgs/logo_tvmais_4.png"/>
       </ion-title>
     </ion-toolbar>
   </ion-header>
@@ -10,7 +10,6 @@
   <ion-content class="menu-background">
     <ion-list class="menu-background">
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)" icon-left>
-        <ion-icon name="{{p.icon}}"></ion-icon>
         {{p.title}}
       </button> 
     </ion-list>
