--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,7 +34,7 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #ff7700,
+  primary:    #f0870f,
   light:      #d6d6d6,
   dark:       #323232,
   facebook: #3b5998,
